--- a/src/FunPokedex.Api/FunPokedex.Api.csproj
+++ b/src/FunPokedex.Api/FunPokedex.Api.csproj
@@ -1,8 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FunPokedex.Clients.PokeApi\FunPokedex.Clients.PokeApi.csproj" />
   </ItemGroup>
 
 </Project>
