--- a/src/FunPokedex.Core/FunPokedex.Core.csproj
+++ b/src/FunPokedex.Core/FunPokedex.Core.csproj
@@ -1,10 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.16.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Vogen" Version="4.0.19" />
   </ItemGroup>
 </Project>
